--- a/sgthesis.cls
+++ b/sgthesis.cls
@@ -1,9 +1,12 @@
 % sgthesis.cls
-\NeedsTeXFormat{LaTeX2e}
+% \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{sgthesis}[2024/12/12 Sogang University Thesis Class]
 
-% report 클래스 기반, A4용지 11pt
-\LoadClass[a4paper,11pt]{report}
+% report 클래스 기반, A4용지 11pt, two-sided
+\LoadClass[a4paper, 11pt, twoside]{report}
+
+% no page number on blank page by cleardoublepage
+\usepackage{emptypage}
 
 % 폰트 설정
 \RequirePackage{unicode-math}
@@ -12,9 +15,13 @@
 \setsansfont{Latin Modern Sans}
 \setmonofont{Latin Modern Mono}
 \setmathfont{Latin Modern Math}
+%% 한글폰트
 \setmainhangulfont{Noto Serif CJK KR}
 \setsanshangulfont{Noto Sans CJK KR}
 \setmonohangulfont{Noto Sans Mono CJK KR}
+
+% Babel 설정 추가
+\RequirePackage[english,korean,provide*=*]{babel}
 
 % 여백 설정
 \RequirePackage{geometry}
@@ -34,7 +41,7 @@
 \setlength{\parindent}{2em} 
 \setlength{\parskip}{0pt}
 
-% Hyperref 및 링크 색상 설정
+% Hyperref 및 링크 색상
 \RequirePackage{hyperref}
 \RequirePackage[dvipsnames,svgnames,x11names]{xcolor}
 \hypersetup{
@@ -50,32 +57,31 @@
     pdfdisplaydoctitle=true
 }
 
-% 기타 패키지
+% 패키지
 \RequirePackage{booktabs}
 \RequirePackage{multirow}
 \RequirePackage{tabularx}
 \RequirePackage{enumitem}
 \RequirePackage{caption}
 \RequirePackage{subcaption}
-\RequirePackage{etoolbox} % for \appto and \ifdefempty
-\RequirePackage[absolute,overlay,showboxes]{textpos} % 절대 위치 지정 패키지 추가
-\RequirePackage{luacode} % Lua code block
-% \usepackage{ragged2e} % justifying
-\RequirePackage{tikz} % for seal
+\RequirePackage{etoolbox}
+\RequirePackage[absolute,overlay]{textpos}
+\RequirePackage{luacode}
+\RequirePackage{tikz}
 
 \newcommand{\seal}{%
-  \raisebox{-0.7ex}{% 수직 정렬을 위해 도장을 약간 올립니다. 필요에 따라 값을 조정하세요.
+  \raisebox{-0.7ex}{%
     \begin{tikzpicture}[scale=0.5]
-      \draw[line width=1pt] (0,0) circle (0.55cm); % 원 그리기
-      \node at (-0.05,0) {\fontsize{10pt}{10pt}\selectfont 인}; % "인" 글자를 약간 왼쪽으로 이동
+      \draw[line width=1pt] (0,0) circle (0.55cm);
+      \node at (-0.05,0) {\fontsize{10pt}{10pt}\selectfont 인};
     \end{tikzpicture}%
   }%
 }
 
-% textpos 설정 (단위는 pt로 설정)
+% textpos 설정
 \setlength{\TPHorizModule}{1pt}
 \setlength{\TPVertModule}{1pt}
-\textblockorigin{0pt}{0pt} % 페이지 왼쪽 상단을 기준점으로 설정
+\textblockorigin{0pt}{0pt}
 
 % Lua 함수를 정의하여 mm -> pt 변환
 \begin{luacode}
@@ -92,7 +98,7 @@
   end
 \end{luacode}
 
-% LaTeX 명령어: 값을 미리 계산하고 저장
+% 미리계산
 \edef\pageWidthPT{\directlua{tex.sprint(tex.dimen.paperwidth / 65536)}} % 전체 너비
 \edef\pageHeightPT{\directlua{tex.sprint(tex.dimen.paperheight / 65536)}} % 전체 높이
 \edef\centerWidthPT{\directlua{tex.sprint(tex.dimen.paperwidth / 65536 / 2)}} % 가로 중앙
@@ -102,20 +108,17 @@
 \newcommand{\ptFromPageBottom}[1]{\directlua{tex.sprint(ptFromPageBottom("#1"))}}
 \newcommand{\ptMinusFromWidth}[1]{\directlua{tex.sprint(ptMinusFromWidth("#1"))}}
 
-%%%%%%%%%%%%%%%%%%%%% 추가 사항 %%%%%%%%%%%%%%%%%%%%%
 
-% 옵션값 저장용 변수 초기화
-\newcommand{\sgcommittees}{}    % 심사위원 목록을 저장할 변수
+% 초기화
+\newcommand{\sgcommittees}{}% 심사위원 목록
 
 \def\sg@degreeopt{}
 \def\sg@languageopt{}
 
-% 키 선언: 단순히 .store로 값을 보관
 \DeclareKeys{
   degree   .store = \sg@degreeopt,
-  language .store = \sg@languageopt,
+  doclang .store = \sg@languageopt,
 }
-
 
 % 옵션 처리
 \ProcessKeyOptions
@@ -123,39 +126,42 @@
 % degree 처리 (기본값 master)
 \def\sg@degree{master}
 \ifdefempty{\sg@degreeopt}{
-  % 기본값 유지
+  % 기본값
 }{
   \edef\sg@degree{\sg@degreeopt}
 }
 
-% language 처리 (기본값 english)
-\def\sg@language{english}
+% language 처리 (기본값 korean)
+\def\sg@doclang{korean}
 \ifdefempty{\sg@languageopt}{
-  % 기본값 유지
+  % 기본값
 }{
-  \edef\sg@language{\sg@languageopt}
+  \edef\sg@doclang{\sg@languageopt}
 }
+\typeout{DEBUG: doclang \sg@doclang}
+\selectlanguage{\sg@doclang} % doclang 옵션에 따라 언어 설정
 
 
-% 메타데이터 저장용 변수 초기화
-\def\sg@title{}       
-\def\sg@subtitle{}    
-\def\sg@author{}       
-\def\sg@supervisor{}   
-\def\sg@department{}   
-\def\sg@major{}        
-\def\sg@degreeyear{}   
-\def\sg@degreemonth{}  
-\def\sg@degreeday{}    
-\def\sg@approvalyear{} 
+% 논문 정보
+\def\sg@title{}
+\def\sg@subtitle{}
+\def\sg@author{}
+\def\sg@supervisor{}
+\def\sg@department{}
+\def\sg@major{}
+\def\sg@degreeyear{}
+\def\sg@degreemonth{}
+\def\sg@degreeday{}
+\def\sg@approvalyear{}
 \def\sg@approvalmonth{}
-\def\sg@approvalday{}  
-\def\sg@kabstract{}    
-\def\sg@kkeywords{}    
-\def\sg@eabstract{}    
-\def\sg@ekeywords{}    
+\def\sg@approvalday{}
+\def\sg@kabstract{}
+\def\sg@kkeywords{}
+\def\sg@eabstract{}
+\def\sg@ekeywords{}
+\def\sg@acknowledgments{}
 
-% degree 판정
+% degree 확인
 \newif\ifsg@master
 \newif\ifsg@phd
 
@@ -172,27 +178,39 @@
   }
 }
 
-% 언어 설정에 따른 목차명, Chapter명 변경
+
+% 글씨 크기
+% 큰제목 16pt (chatper), 작은제목 13pt (section, subsection, subsubsection)
+\RequirePackage{titlesec}
 \AtBeginDocument{%
-  \ifdefstring{\sg@language}{korean}{
-    \renewcommand{\contentsname}{차례}
-    \renewcommand{\listfigurename}{그림 목차}
-    \renewcommand{\listtablename}{표 목차}
-    \renewcommand{\chaptername}{제}
+    \selectlanguage{\sg@doclang} % 한번더 doclang 반영. 안하면 잘 안되서 함.
+    
+    % 각주 9pt
     \makeatletter
-    \renewcommand{\@makechapterhead}[1]{%
-      \vspace*{50\p@}%
-      {\parindent \z@ \centering \normalfont
-        {\huge \bfseries \chaptername\ \thechapter\ 장}\par\nobreak
-        \vskip 20\p@
-        {\Huge \bfseries #1}\par\nobreak
-        \vskip 40\p@
-      }}
+    \renewcommand{\footnotesize}{\fontsize{9pt}{11pt}\selectfont}
     \makeatother
-  }
+    
+    % chapter 제목: 16pt, 진하게
+    \titleformat{\chapter}[display]
+      {\bfseries\fontsize{16pt}{20pt}\selectfont}{\chaptername~\thechapter}{20pt}{}
+    
+    % section 제목: 13pt, 진하게
+    \titleformat{\section}
+      {\bfseries\fontsize{13pt}{15.6pt}\selectfont}{\thesection}{1em}{}
+    
+    % subsection 제목: 13pt, 진하게
+    \titleformat{\subsection}
+      {\bfseries\fontsize{13pt}{15.6pt}\selectfont}{\thesubsection}{1em}{}
+    
+    % subsubsection 제목: 13pt, 진하게
+    \titleformat{\subsubsection}
+      {\bfseries\fontsize{13pt}{15.6pt}\selectfont}{\thesubsubsection}{1em}{}
 }
 
-% 명령어 정의
+
+
+
+% 논문 정보 셋팅용 명령어 정의
 \newcommand{\Title}[1]{\def\sg@title{#1}}
 \newcommand{\Subtitle}[1]{\def\sg@subtitle{#1}}
 \newcommand{\Author}[1]{\def\sg@author{#1}}
@@ -201,8 +219,16 @@
 \newcommand{\Major}[1]{\def\sg@major{#1}}
 \newcommand{\DegreeDate}[3]{\def\sg@degreeyear{#1}\def\sg@degreemonth{#2}\def\sg@degreeday{#3}}
 \newcommand{\ApprovalDate}[3]{\def\sg@approvalyear{#1}\def\sg@approvalmonth{#2}\def\sg@approvalday{#3}}
+% Abstract 및 Keywords
+\newcommand{\KAbstract}[1]{\def\sg@kabstract{#1}}
+\newcommand{\KKeywords}[1]{\def\sg@kkeywords{#1}}
+\newcommand{\EAbstract}[1]{\def\sg@eabstract{#1}}
+\newcommand{\EKeywords}[1]{\def\sg@ekeywords{#1}}
+% Acknowledgments
+\newcommand{\Acknowledgments}[1]{\def\sg@acknowledgments{#1}}
 
-% committee 명령어: 심사위원 누적 using etoolbox
+
+% 심사위원 쌓기
 \newcommand{\committee}[1]{%
   \forcsvlist{\addcommittee}{#1}%
 }
@@ -215,13 +241,9 @@
   }%
 }
 
-% Abstract 및 Keywords
-\newcommand{\KAbstract}[1]{\def\sg@kabstract{#1}}
-\newcommand{\KKeywords}[1]{\def\sg@kkeywords{#1}}
-\newcommand{\EAbstract}[1]{\def\sg@eabstract{#1}}
-\newcommand{\EKeywords}[1]{\def\sg@ekeywords{#1}}
 
-% 심사위원 출력 명령어 및 카운터 정의
+
+% 심사위원 출력
 \newcounter{commcount}
 
 \newcommand{\printcommittee}[1]{%
@@ -234,32 +256,18 @@
   \stepcounter{commcount}%
 }
 
-% % 심사위원 출력 명령어 수정
-% \newcommand{\printcommittee}[1]{%
-%     \typeout{#1} % 디버깅용 출력
-%   \ifnum\value{commcount}=0
-%     \noindent\begin{tabularx}{\linewidth}{@{}l X@{}}
-%       주심: #1 & \hfill \seal \\
-%     \end{tabularx}\par\vspace*{1.5cm}% 첫 위원은 주심과 도장
-%   \else
-%     \noindent\begin{tabularx}{\linewidth}{@{}l X@{}}
-%       부심: #1 & \hfill \seal \\
-%     \end{tabularx}\par\vspace*{1.5cm}% 이후 위원은 부심만
-%   \fi
-%   \stepcounter{commcount}%
-% }
 
-% Define a new environment for special pages
+% 특별히 용지상 위치 있는거에 여백 방해되서 만듬.
 \newenvironment{specialpage}{
   \newgeometry{left=0mm, right=0mm, top=0mm, bottom=0mm, nohead, nofoot}
   \thispagestyle{empty}
 }{
-  % \clearpage
-  \restoregeometry
+  \clearpage
+  \aftergroup\restoregeometry
 }
 
 
-
+% 그냥 확인
 \typeout{DEBUG: \pageWidthPT}
 \typeout{DEBUG: \pageHeightPT}
 \typeout{DEBUG: \centerWidthPT}
@@ -268,7 +276,7 @@
 \typeout{DEBUG: ptMinusFromWidth: \ptMinusFromWidth{90mm}}
 
 
-% Make Cover
+% 겉표지
 \newcommand{\MakeCover}{%
   \begin{specialpage}
     % 박사학위논문 표시
@@ -286,17 +294,17 @@
       \centering
       \noindent
       \fontsize{26pt}{26pt}\selectfont \sg@title \\
-      %% 논문 제목이 두줄에 걸칠 때는 사이 간격을 2cm로 함???
+      % "논문 제목이 두줄에 걸칠 때는 사이 간격을 2cm로 함" 이라고 하네요??
       % 부제목
       \vspace{2cm}
       \fontsize{18pt}{18pt}\selectfont \sg@subtitle
     \end{textblock}
-    
-    % 부제목
+
+    % 부제목 (제목 두줄 안되면 이게 정위치)
     % \begin{textblock}{\ptMinusFromWidth{90mm}}[0.5,0](\centerWidthPT,\toPt{80mm})
     %   \centering
     %   \noindent
-    %   \fontsize{18pt}{18pt}\selectfont \sg@subtitle
+    %   {\setstretch{1.3}\fontsize{18pt}{18pt}\selectfont \sg@subtitle}
     % \end{textblock}
 
     % 제출일
@@ -306,16 +314,16 @@
       \fontsize{16pt}{16pt}\selectfont \sg@degreeyear 년 \sg@degreemonth 월
     \end{textblock}
 
-     % 대학원
-     %% 좌우 6.5cm 여백
+    % 대학원
+    %% 좌우 6.5cm 여백
     \begin{textblock}{\ptMinusFromWidth{130mm}}[0.5,0](\centerWidthPT,\ptFromPageBottom{60mm})
       \centering
       \noindent
       \fontsize{22pt}{22pt}\selectfont 서강대학교 대학원
     \end{textblock}
     
-     % 학과 및 전공
-     %% 좌우 6.5cm 여백
+    % 학과 및 전공
+    %% 좌우 6.5cm 여백
     \begin{textblock}{\ptMinusFromWidth{130mm}}[0.5,0](\centerWidthPT,\ptFromPageBottom{50mm})
       \centering
       \noindent
@@ -334,7 +342,7 @@
 }
 
 
-% Make Title Page
+% 표제면
 \newcommand{\MakeTitlePage}{%
   \begin{specialpage}
     % 제목
@@ -343,18 +351,18 @@
       \centering
       \noindent
       \fontsize{26pt}{26pt}\selectfont \sg@title \\
-      %% 논문 제목이 두줄에 걸칠 때는 사이 간격을 2cm로 함???
+      %% 표제면은 "논문 제목이 두줄에 걸칠 때는 사이 간격을 2cm로 함"라고 안햇는데 그냥 함.
       % 부제목
       \vspace{2cm}
       \fontsize{18pt}{18pt}\selectfont \sg@subtitle
     \end{textblock}
     
-    % 부제목
+    % 부제목 (이게 정위치)
     %% 좌우 4.5cm 여백
     % \begin{textblock}{\ptMinusFromWidth{90mm}}[0.5,0](\centerWidthPT,\toPt{80mm})
     %   \centering
     %   \noindent
-    %   \fontsize{18pt}{18pt}\selectfont \sg@subtitle
+    %   {\setstretch{1.3}\fontsize{18pt}{18pt}\selectfont \sg@subtitle}
     % \end{textblock}
     
     % 제출일
@@ -393,35 +401,32 @@
 }
 
 
-% Make Submission Sheet
+% 제출서
 \newcommand{\MakeSubmissionSheet}{%
   \begin{specialpage}
     % 제목
     %% 좌우 4.5cm 여백
     \begin{textblock}{\ptMinusFromWidth{90mm}}[0.5,0](\centerWidthPT,\toPt{50mm})
-    % 되겠냐에요
-    % \begin{textblock}{\ptMinusFromWidth{70mm}}[0.5,0](\centerWidthPT,\toPt{50mm})
       \centering
       \noindent
-      \fontsize{22pt}{22pt}\selectfont \sg@title \\
-      %% 논문 제목이 두줄에 걸칠 때는 사이 간격을 2cm로 함???
+      {\setstretch{1.3}\fontsize{26pt}{26pt}\selectfont \sg@title} \\
+      %% 겉표지 따라하기. 자리 모자름.
       % 부제목
-      % 되겠냐에요
       \vspace{2cm}
-      \noindent\fontsize{18pt}{18pt}\selectfont \sg@subtitle
+      {\setstretch{1.3}\fontsize{18pt}{18pt}\selectfont \sg@subtitle}
     \end{textblock}
     
-    % % 부제목
+    % 부제목 (이게 정위치)
     % %% 좌우 4.5cm 여백
-    % \begin{textblock}{\ptMinusFromWidth{90mm}}[0.5,0](\centerWidthPT,\toPt{60mm})
+    % \begin{textblock}{\ptMinusFromWidth{90mm}}[0.5,0](\centerWidthPT,\toPt{70mm})
     %   \centering
     %   \noindent
-    %   \fontsize{18pt}{18pt}\selectfont \sg@subtitle
+    %   {\setstretch{1.3}\fontsize{18pt}{18pt}\selectfont \sg@subtitle}
     % \end{textblock}
     
     % 지도교수
     %% 좌우 6.5cm 여백
-    % 되겠냐에요
+    % 제목 두줄되면 자리 모자름. 내려야됨.
     % \begin{textblock}{\ptMinusFromWidth{130mm}}[0.5,0](\centerWidthPT,\toPt{100mm})
     \begin{textblock}{\ptMinusFromWidth{130mm}}[0.5,0](\centerWidthPT,\toPt{150mm})
       \centering
@@ -431,12 +436,12 @@
     
     % 제출 문구
     %% 좌우 5cm 여백
+    % 그냥 모자름. 옆으로 늘림.
     % \begin{textblock}{\ptMinusFromWidth{100mm}}[0.5,0](\centerWidthPT,\ptFromPageBottom{100mm})
-    % 되겠냐에요
     \begin{textblock}{\ptMinusFromWidth{80mm}}[0.5,0](\centerWidthPT,\ptFromPageBottom{100mm})
       \centering
       \noindent
-      \fontsize{16pt}{16pt}\selectfont 이 논문을 \sg@department\ \ifsg@phd 박사 \else 석사 \fi 학위논문으로 제출함.
+      \fontsize{16pt}{16pt}\selectfont 이 논문을 \sg@department\ \ifsg@phd 박사 \else 석사 \fi 학위논문으로 제출함
     \end{textblock}
 
     % 제출일
@@ -474,7 +479,7 @@
   \end{specialpage}
 }
 
-% Make Approval Sheet
+% 인준서
 \newcommand{\MakeApprovalSheet}{%
   \begin{specialpage}
     % 인준서 제목
@@ -500,7 +505,6 @@
     % 심사위원 명단
     %% 우측 4.5cm 여백
     \begin{textblock}{\ptMinusFromWidth{130mm}}[1,0](\ptMinusFromWidth{45mm},\toPt{100mm})
-      % \noindent
       \fontsize{18pt}{18pt}\selectfont
       \setcounter{commcount}{0}%
       \edef\expandedSGCommittees{\noexpand\forcsvlist{\noexpand\printcommittee}{\sgcommittees}}
@@ -512,42 +516,119 @@
 }
 
 
-% Make Acknowledgement
+% 감사의 글
 \newcommand{\MakeAcknowledgement}{%
-  \thispagestyle{empty}
-  감사의 글
-  % 
+  \ifdefstring{\sg@doclang}{korean}{
+    \begin{center}
+      \textbf{\Large 감사의글}
+    \end{center}
+  }{
+    \begin{center}
+      \textbf{\Large Acknowledgments}
+    \end{center}
+  }
+
+  \sg@acknowledgments
+  
   \clearpage
 }
 
-% Make Korean Abstract
+% 국문 초록
+% \sg@kabstract, \sg@kkeywords
 \newcommand{\MakeKoreanAbstract}{%
-  \thispagestyle{empty}
-  국문 초록
-  % \sg@kabstract, \sg@kkeywords
+  \ifdefstring{\sg@doclang}{korean}{
+    \section*{국문초록(요약) 및 \underline{주제어(키워드)}}
+    \phantomsection
+    \addcontentsline{toc}{chapter}{국문초록 및 주제어}
+  }{
+    \section*{Korean Abstract and \underline{Keywords}}
+    \phantomsection
+    \addcontentsline{toc}{chapter}{Korean Abstract and Keywords}
+  }
+  
+  \begin{center}
+    \textbf{\fontsize{13pt}{15pt}\selectfont \sg@title}
+  \end{center}
+  
+  \sg@kabstract
+  \vfill
+  
+  \noindent\textbf{주제어(키워드, 색인어)}\\
+  \noindent\sg@kkeywords\\
+  \hrule
+  ~
   \clearpage
 }
 
-% Make English Abstract
+% 영문 초록
+% \sg@eabstract, \sg@ekeywords
 \newcommand{\MakeEnglishAbstract}{%
-  \thispagestyle{empty}
-  Abstract
-  % \sg@eabstract, \sg@ekeywords
+  \ifdefstring{\sg@doclang}{korean}{
+    \section*{Abstract}
+    \phantomsection
+    \addcontentsline{toc}{chapter}{영문초록 및 주제어}
+  }{
+    \section*{Abstract}
+    \phantomsection
+    \addcontentsline{toc}{chapter}{English Abstract and Keywords}
+  }
+  
+  \begin{center}
+    \textbf{\fontsize{13pt}{15pt}\selectfont \sg@title}
+  \end{center}
+  
+  \sg@eabstract
+  \vfill
+  
+  \noindent Key words~:~\sg@ekeywords\\
+  \hrule
+  ~
   \clearpage
 }
+
+
+% TOC에 추가로 넣을 것들
+\apptocmd{\tableofcontents}{\cleardoublepage}{}{}
+
+\pretocmd{\listoffigures}{\phantomsection}{}{}
+\patchcmd{\listoffigures}{\chapter*{\listfigurename}}{\chapter*{\listfigurename}\addcontentsline{toc}{chapter}{\protect\textbf{\listfigurename}}}{}{}
+\apptocmd{\listoffigures}{\cleardoublepage}{}{}
+
+\pretocmd{\listoftables}{\phantomsection}{}{}
+\patchcmd{\listoftables}{\chapter*{\listtablename}}{\chapter*{\listtablename}\addcontentsline{toc}{chapter}{\protect\textbf{\listtablename}}}{}{}
+\apptocmd{\listoftables}{\cleardoublepage}{}{}
+
+\newcommand{\ShowBibliographyHeading}{%
+  \ifdefstring{\sg@doclang}{korean}{
+    \chapter*{참고 문헌}
+    \addcontentsline{toc}{chapter}{참고 문헌}
+  }{
+    \chapter*{References}
+    \addcontentsline{toc}{chapter}{References}
+  }
+}
+
 
 % Make front matter
 \newcommand{\makefrontmatter}{%
     \MakeCover   % 겉표지
+    \thispagestyle{empty}
     \cleardoublepage
 
     \MakeTitlePage  % 표제면
+    \thispagestyle{empty}
     \cleardoublepage
 
     \MakeSubmissionSheet % 제출서
+    \thispagestyle{empty}
     \cleardoublepage
 
     \MakeApprovalSheet % 인준서
+    \thispagestyle{empty}
+    \cleardoublepage
+
+    \MakeAcknowledgement % 감사의 글
+    \thispagestyle{empty}
     \cleardoublepage
 }
 
