Modified font settings and expanded compiler compatibility.

--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,10 @@
 \usepackage{array}
 \usepackage{amsmath}
 
+%기타 워닝 제거
+\usepackage{lmodern}
+\usepackage[activate=false]{microtype}
+
 %%% Hyperref 메타데이터 설정
 \hypersetup{
 	pdftitle={pdftitle},
